// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon handles invalid icon sources 1`] = `
{
  "Component": {
    "active": false,
    "alpha": 1,
    "attached": true,
    "boundsMargin": null,
    "clipping": false,
    "color": 4294967295,
    "enabled": true,
    "flex": false,
    "flexItem": false,
    "h": 50,
    "hasFinalFocus": true,
    "hasFocus": true,
    "isComponent": true,
    "mount": 0,
    "mountX": 0,
    "mountY": 0,
    "pivot": 0.5,
    "pivotX": 0.5,
    "pivotY": 0.5,
    "ref": "Component",
    "renderOfScreen": undefined,
    "renderToTexture": false,
    "scale": 1,
    "scaleX": 1,
    "scaleY": 1,
    "state": "",
    "tag": [Function],
    "tags": [
      "Component",
    ],
    "texture": {
      "h": 50,
      "src": "bad/path",
      "type": "CustomImageTexture",
      "w": 50,
    },
    "type": "Icon",
    "visible": true,
    "w": 50,
    "x": 0,
    "y": 0,
    "zIndex": 0,
  },
}
`;

exports[`Icon renders an icon path 1`] = `
{
  "Component": {
    "active": false,
    "alpha": 1,
    "attached": true,
    "boundsMargin": null,
    "clipping": false,
    "color": 4294967295,
    "enabled": true,
    "flex": false,
    "flexItem": false,
    "h": 50,
    "hasFinalFocus": true,
    "hasFocus": true,
    "isComponent": true,
    "mount": 0,
    "mountX": 0,
    "mountY": 0,
    "pivot": 0.5,
    "pivotX": 0.5,
    "pivotY": 0.5,
    "ref": "Component",
    "renderOfScreen": undefined,
    "renderToTexture": false,
    "scale": 1,
    "scaleX": 1,
    "scaleY": 1,
    "state": "",
    "tag": [Function],
    "tags": [
      "Component",
    ],
    "texture": {
      "h": 50,
      "src": "src/assets/images/ic_lightning_white_32.png",
      "type": "CustomImageTexture",
      "w": 50,
    },
    "type": "Icon",
    "visible": true,
    "w": 50,
    "x": 0,
    "y": 0,
    "zIndex": 0,
  },
}
`;

exports[`Icon renders an inline svg 1`] = `
{
  "Component": {
    "active": false,
    "alpha": 1,
    "attached": true,
    "boundsMargin": null,
    "clipping": false,
    "color": 4294967295,
    "enabled": true,
    "flex": false,
    "flexItem": false,
    "h": 50,
    "hasFinalFocus": true,
    "hasFocus": true,
    "isComponent": true,
    "mount": 0,
    "mountX": 0,
    "mountY": 0,
    "pivot": 0.5,
    "pivotX": 0.5,
    "pivotY": 0.5,
    "ref": "Component",
    "renderOfScreen": undefined,
    "renderToTexture": false,
    "scale": 1,
    "scaleX": 1,
    "scaleY": 1,
    "state": "",
    "tag": [Function],
    "tags": [
      "Component",
    ],
    "texture": {
      "h": 50,
      "src": "<svg xmlns="http://www.w3.org/2000/svg" height="100" width="100"><circle cx="50" cy="50" r="40"/></svg>",
      "type": "CustomImageTexture",
      "w": 50,
    },
    "type": "Icon",
    "visible": true,
    "w": 50,
    "x": 0,
    "y": 0,
    "zIndex": 0,
  },
}
`;

exports[`Icon renders an svg path 1`] = `
{
  "Component": {
    "active": false,
    "alpha": 1,
    "attached": true,
    "boundsMargin": null,
    "clipping": false,
    "color": 4294967295,
    "enabled": true,
    "flex": false,
    "flexItem": false,
    "h": 50,
    "hasFinalFocus": true,
    "hasFocus": true,
    "isComponent": true,
    "mount": 0,
    "mountX": 0,
    "mountY": 0,
    "pivot": 0.5,
    "pivotX": 0.5,
    "pivotY": 0.5,
    "ref": "Component",
    "renderOfScreen": undefined,
    "renderToTexture": false,
    "scale": 1,
    "scaleX": 1,
    "scaleY": 1,
    "state": "",
    "tag": [Function],
    "tags": [
      "Component",
    ],
    "texture": {
      "h": 50,
      "src": "src/assets/images/circle.svg",
      "type": "CustomImageTexture",
      "w": 50,
    },
    "type": "Icon",
    "visible": true,
    "w": 50,
    "x": 0,
    "y": 0,
    "zIndex": 0,
  },
}
`;
